# ML_Curriculum

./: .markdownlint-cli2.jsonc  AGENTS.md  README.md  pyproject.toml
.codex/: PLAN_PROMPT.md  README.md
.codex/skills/: README.md
.github/workflows/: ci.yml
context/: README.md  unity_theory_context_for_agents_refreshed.md
kanban/: 13.1-review-work-items.md  README.md  backlog.md  epics.md  ml_ai_course_kanban_v2.md  work-cards.md
modules/: README.md
modules/00-math-toolkit/: README.md
modules/01-optimization/: README.md
modules/02-statistical-learning/: README.md
modules/03-linear-models/: README.md
modules/04-kernel-methods/: README.md
modules/05-probabilistic-modeling/: README.md
modules/06-neural-networks/: README.md
modules/07-deep-learning-systems/: README.md
modules/08-cnn-vision/: README.md
modules/09-sequence-models/: README.md
modules/10-transformers-llms/: README.md
modules/11-generative-models/: README.md
modules/12-reinforcement-learning/: README.md
modules/13-graph-learning/: README.md
modules/14-causality-reasoning/: README.md
modules/15-ethics-safety-evaluation/: README.md
modules/16-category-theory-for-ml/: README.md
modules/17-unity-theory-perspectives/: README.md
projects/: README.md
projects/advanced/: README.md  rubric.md
projects/beginner/: README.md
shared/: README.md  __init__.py
syllabus/: README.md  assessment-strategy.md  course-overview.md  learning-objectives.md  onboarding.md  pacing-guide.md  reading-list.md
tests/: test_evaluation.py  test_training_diagnostics.py
tooling/: README.md
(+360 files in other folders)
