[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-curriculum"
version = "0.1.0"
description = "Reproducible Python environment for the ML/AI curriculum repository."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "matplotlib==3.8.4",
  "scikit-learn==1.5.1",
  "pandas==2.2.2",
  "jupyterlab==4.2.5",
  "ipykernel==6.29.5",
  "nbclient==0.10.0",
  "nbformat==5.10.4",
]

[project.optional-dependencies]
deep-learning = [
  "torch==2.4.1",
]
gpu = [
  "torch==2.4.1",
]

[tool.setuptools]
include-package-data = false
py-modules = []
