[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-curriculum"
version = "0.1.0"
description = "Repository-based machine learning and AI curriculum tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29,<7",
    "matplotlib>=3.9,<4",
    "nbclient>=0.10,<1",
    "nbformat>=5.10,<6",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<0.12",
]
deep-learning = [
    "torch>=2.3,<3",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
